objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Date__c</fullName>
        <description>This field contains the date of the campaign&apos;s main event and is manually populated. This date is distinguishable from a campaign&apos;s Start Date and End Date, which signifies the date span of VSA&apos;s event planning. End Date can sometimes be after Campaign Date, as there can be post-event activities that needs to be done (VSA-6).</description>
        <inlineHelpText>The campaign&apos;s main event date.</inlineHelpText>
        <label>Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Number_of_Volunteers__c</fullName>
        <description>This field contains the confirmed number of volunteers that are attending the event. VSA is currently (Nov &apos;18) not using the V4S app, and therefore we are not able to use the GW_Volunteers__Number_of_Volunteers__c field (VSA-7).</description>
        <inlineHelpText>Please provide the confirmed number of volunteers which will attend the event.</inlineHelpText>
        <label>Confirmed Number of Volunteers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Number_of_Volunteers__c</fullName>
        <description>This field contains the number of volunteers that are attending the event. VSA is currently (Nov &apos;18) not using the V4S app, and therefore we are not able to use the GW_Volunteers__Number_of_Volunteers__c field (VSA-7).</description>
        <inlineHelpText>Please provide the number of volunteers which are expected to attend the event.</inlineHelpText>
        <label>Expected Number of Volunteers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fundraiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A campaign record in Salesforce can represent a personal JustGiving/Virgin Money Giving fundraising page. This field contains a look-up to the fundraiser contact who has set up that fundraising page (VSA-48).</description>
        <inlineHelpText>The contact who has set up a personal fundraising page (if applicable).</inlineHelpText>
        <label>Fundraiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fundraiser Pages</relationshipLabel>
        <relationshipName>CampaignFundraiser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Host_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains a look-up to the volunteering organisation&apos;s host on the day of the event (VSA-7).</description>
        <inlineHelpText>Please provide the volunteering organisation&apos;s host contact for the event day itself.</inlineHelpText>
        <label>Host Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Corporate Volunteering Host</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Risk_Assessment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the risk assessment for the event has been completed (VSA-7).</description>
        <label>Risk Assessment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains a look-up to volunteering organisation&apos;s primary contact for the corporate volunteering event. This will typically be a contact of an administrative nature, e.g., a coordinator, someone from HR or accounting (VSA-7).</description>
        <inlineHelpText>Please provide the volunteering organisation&apos;s primary contact - typically for administrative purposes.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Corporate Volunteering Contact</relationshipLabel>
        <relationshipName>Corporate_Volunteering_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Document__c</fullName>
        <description>This field contains a URL for the risk assessment document, which will be stored off-platform in VSA&apos;s document management system of choice (VSA-7).</description>
        <inlineHelpText>Please provide the hyperlink to the applicable risk assessment.</inlineHelpText>
        <label>Risk Assessment Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>This field contains the sub-categorisation of the campaign. The available picklist values are dependent on the Type-field (VSA-6).</description>
        <inlineHelpText>Please provide a sub type to the campaign, if applicable.</inlineHelpText>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Runs &amp; Walks</fullName>
                </value>
                <value>
                    <fullName>Cycling</fullName>
                </value>
                <value>
                    <fullName>Overseas</fullName>
                </value>
                <value>
                    <fullName>Obstacle</fullName>
                </value>
                <value>
                    <fullName>Formal</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>VSA</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>In Aid Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Contract_Document__c</fullName>
        <description>This field contains a URL for the supplier contract, which will be stored off-platform in VSA&apos;s document management system of choice (VSA-7).</description>
        <inlineHelpText>Please provide the hyperlink to the applicable supplier contract.</inlineHelpText>
        <label>Supplier Contract Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Volunteering_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the company/organisation who is volunteering their employees to a VSA event.</description>
        <label>Volunteering Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corporate Volunteering Events</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_Campaign_URL__c</fullName>
        <description>This field contains a URL value provided by Charity Checkout. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Campaign URL (CC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cc_Created_by_Charity_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to TRUE if the campaign has been created via Charity Checkout. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Created by Charity Checkout (CC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_Donation_Campaign_Reference_Code__c</fullName>
        <description>This is a text value which is provided by Charity Checkout (CC). It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Donation Campaign Reference Code (CC)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Page_ID__c</fullName>
        <description>This field contains a page ID value which is provided by Charity Checkout (CC). It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <externalId>true</externalId>
        <label>Page ID (CC)</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cc_Team_Page_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains a look-up to the contact record who owns the Charity Checkout team page. It is populated by the Charity Checkout Zapier trigger (VSA-31).</description>
        <label>Team Page Owner (CC)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Pages</relationshipLabel>
        <relationshipName>Team_Page_Owner_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>A VSA event, challenge event or community event.</description>
        <label>VSA Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>VSA_Corporate_Volunteering</fullName>
        <active>true</active>
        <description>A VSA corporate volunteering event</description>
        <label>VSA Corporate Volunteering</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>